--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+Telegram Chatbot-->
 python-telegram-bot==20.7
 spacy==3.7.2
 
+Second repo experiment-->
 requests==2.31.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
