--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ Second repo experiment-->
 requests==2.31.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
+
+Machine Learning-->
+scikit-learn==1.3.0
+matplotlib==3.8.0
+numpy==1.26.0
